<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CalHacks</string>
    <string name="here_app_id">XoKCbFz94Y3K4XaHgxKs</string>
    <string name="here_app_code">xGOs6CDL8pe02mYdVlEgow</string>
    <string name="settings">Settings</string>
    <string name="store_items">Store Stuff</string>
    <string name="get_items">Get Stuff</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_store_stuff">StoreStuffActivity</string>
    <string name="need_some_info">We need some info</string>
    <string name="small">Small\n12\"&#xd7;12\"&#xd7;12\"</string>
    <string name="medium">Medium\n18\"&#xd7;18\"&#xd7;18\"</string>
    <string name="large">Large\n24\"&#xd7;24\"&#xd7;24\"</string>
    <string name="pick_size">Pick a locker size&#8230;</string>
    <string name="confirm_address">Please confirm your address!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone_number">Phone Number</string>
    <string name="buttong_save">Save</string>
    <string name="title_activity_item_description">ItemDescriptionActivity</string>
    <string name="tell_us_about_item">Tell us about your items</string>
    <string name="title">Title (required)</string>
    <string name="description">Description</string>
    <string name="good_to_go">Good to Go</string>
    <string name="title_activity_confirm_postmates">Postmates Confirmation</string>
    <string name="confirmation_title">How does this look?</string>
    <string name="must_enter_valid_title">You must enter a valid title :(</string>
    <string name="must_take_picture">You must take a picture of your items!</string>
    <string name="take_photo">Photo of your item goes here!</string>
    <string name="looks_good">Looks good to me</string>
    <string name="button_confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="confirm_activity">Confirm Address</string>
    <string name="pickup_info">Pickup Information</string>
    <string name="pickup_confirmation_text">It\'s on its way!</string>
    <string name="title_activity_get_stuff">GetStuffActivity</string>
    <string name="valid_first">Must enter a valid first name</string>
    <string name="valid_last">Must enter a valid last name</string>
    <string name="valid_city">Must enter a valid city</string>
    <string name="valid_state">Must enter a valid state</string>
    <string name="valid_address">Must enter a valid address</string>
    <string name="valid_phone">Must enter a valid phone</string>
    <string name="price">Price: </string>
    <string name="eta">ETA: </string>
    <string name="minutes">mins</string>
</resources>