<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.marcussjolin.calhacks.SettingsActivity">

    <TextView
        android:id="@+id/need_some_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/need_some_info" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/need_some_info"
        android:layout_marginBottom="10dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:layout_marginBottom="10dp"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/last_name"
        android:hint="@string/address"/>

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginBottom="10dp"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city"
        android:layout_marginBottom="10dp"
        android:hint="@string/state"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/state"
        android:inputType="number"
        android:hint="@string/phone_number"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:hint="@string/buttong_save"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_ripple" />

</RelativeLayout>
