<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.marcussjolin.calhacks.ItemDescriptionActivity">

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_preview_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/ic_photo_camera_black_36dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/camera_button"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_description_height"
        android:layout_below="@id/title"
        android:hint="@string/description"/>

    <Button
        android:id="@+id/good_to_go"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        android:background="@drawable/button_ripple"
        android:text="@string/good_to_go"
        android:textColor="@color/white"/>

</RelativeLayout>
