<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marcussjolin.calhacks.StoreStuffSizeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:background="@drawable/button_ripple"
            android:text="@string/small"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_below="@id/button_small"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:background="@drawable/button_ripple"
            android:text="@string/medium"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_below="@id/button_medium"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:background="@drawable/button_ripple"
            android:text="@string/large"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
